# metaphor-plugin-codegen

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: architecture.md  commands-apps.md  commands-make.md  commands-migration.md  commands-module.md  commands-proto.md  commands-seed.md  configuration.md  templates.md
src/: app_generator.rs  lib.rs  main.rs  utils.rs
src/commands/: apps.rs  make.rs  migration.rs  mod.rs  module.rs  proto.rs  routes.rs  seed.rs
src/templates/: mod.rs  template-config.json  template_processor.rs
src/templates/aggregate/: aggregate_root.proto  aggregate_root.rs  child_entity.proto  domain_events.proto  domain_events.rs  repository.proto  repository.rs  value_object.proto  value_object.rs
src/templates/app/: Cargo.toml  README.md  docker-compose.yml
src/templates/app/.sqlx/: config.json
src/templates/app/config/: application-dev.yml  application-prod.yml  application.yml  database.yml
src/templates/app/src/: main.rs
src/templates/app/src/application/: mod.rs
src/templates/app/src/application/commands/: mod.rs
src/templates/app/src/application/queries/: mod.rs
src/templates/app/src/application/services/: mod.rs
src/templates/app/src/application/use_cases/: backup_restore.rs  cross_module_search.rs  mod.rs  system_configuration.rs  user_onboarding.rs
src/templates/app/src/config/: database.rs  mod.rs  server.rs
src/templates/app/src/configuration/: mod.rs
src/templates/app/src/domain/: mod.rs
src/templates/app/src/domain/entities/: mod.rs
src/templates/app/src/domain/events/: mod.rs
src/templates/app/src/domain/repositories/: mod.rs
src/templates/app/src/domain/services/: audit_service.rs  mod.rs  module_health_service.rs  permission_service.rs  user_session_service.rs
src/templates/app/src/domain/value_objects/: mod.rs
src/templates/app/src/infrastructure/: mod.rs
src/templates/app/src/infrastructure/database/: connection.rs  crud.rs  memory_repository.rs  mod.rs
src/templates/app/src/infrastructure/database/migrations/: mod.rs
src/templates/app/src/infrastructure/database/repositories/: mod.rs
src/templates/app/src/infrastructure/health/: mod.rs
src/templates/app/src/infrastructure/messaging/: mod.rs  orchestrator.rs
src/templates/app/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
src/templates/app/src/presentation/: mod.rs
src/templates/app/src/presentation/cli/: mod.rs
src/templates/app/src/presentation/grpc/: mod.rs
src/templates/app/src/presentation/http/: mod.rs
src/templates/app/src/presentation/http/controllers/: mod.rs
src/templates/app/src/presentation/http/middleware/: mod.rs
src/templates/app/src/presentation/http/routes/: mod.rs
src/templates/app/src/routes/: api.rs  mod.rs  web.rs
src/templates/app/src/shared/: error.rs  mod.rs  pagination.rs  response.rs
src/templates/app/tests/: README.md
src/templates/entity/: entity.proto
src/templates/make/command/: {{COMMAND_NAME_SNAKE}}.rs
src/templates/make/event/: {{EVENT_NAME_SNAKE}}.proto  {{EVENT_NAME_SNAKE}}.rs
src/templates/make/handler/: {{HANDLER_NAME_SNAKE}}_crud_handler.rs  {{HANDLER_NAME_SNAKE}}_handler.rs
src/templates/make/migration/: alter_{{TABLE_NAME}}.down.sql  alter_{{TABLE_NAME}}.up.sql  create_{{TABLE_NAME}}.down.sql  create_{{TABLE_NAME}}.up.sql  (+2 more)
src/templates/module/: Cargo.toml  README.md  buf.yaml  build.rs  lib.rs
(+121 files in other folders)
