[package]
name = "metaphor-plugin-codegen"
version = "0.1.7"
edition = "2021"
description = "Code generation plugin for Metaphor CLI (make, module, apps, proto, migration, seed)"
authors = ["Farid Hidayat"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/faridlab/metaphor-plugin-codegen"
keywords = ["cli", "code-generator", "scaffolding", "rust", "ddd"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "metaphor-codegen"
path = "src/main.rs"

[lib]
name = "metaphor_codegen"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "color"] }
colored = "2"

# Error handling
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Template processing
handlebars = "4"

# File system
walkdir = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"

# Proto compilation
tonic-build = "0.12"

# URL parsing
url = "2"

# Environment
dotenvy = "0.15"
